# jewellery-commerce-shop

./: README.md  pyproject.toml
.envs/: dev.env
core/: .dockerignore  main.py  pyproject.toml
core/config/: env.py
core/config/settings/: __init__.py  base.py  dev.py  prod.py
core/docker/: Dockerfile
