[tool.poetry]
name = "jewellery-commerce-shop"
version = "0.1.0"
description = ""
authors = ["radthenone <krzyzak.codes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
celery = "^5.3.4"
redis = "^5.0.0"
watchfiles = "^0.20.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
